# Libjpeg

./: README.md
app/: build.gradle
app/src/androidTest/java/com/lin/libjpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jconfigint.h  jpeglib.h  native-lib.cpp
app/src/main/java/com/lin/libjpeg/: MainActivity.java
app/src/test/java/com/lin/libjpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
